# Titan-Share-settings

./: .gitignore  CMakeLists.txt  README.md  build.sh  fix_font_weights.py  fix_fonts.py  problems_and_solutions.txt  push_wiki.sh  rebuild.sh  remove_bg.py  remove_black_bg.py  run_fix.sh  test.cpp
qml/: Main.qml
qml/components/: SectionHeader.qml  SettingsCard.qml  SidebarItem.qml  StatusBadge.qml  TitanButton.qml  TitanSlider.qml  TitanSwitch.qml
qml/pages/: AboutPage.qml  AppearancePage.qml  AudioPage.qml  DisplayPage.qml  NetworkPage.qml  PowerPage.qml  SecurityPage.qml  SystemPage.qml
scripts/: cycle_power.sh  install-battery-rules.sh  install-eq-presets.py
src/: audiobackend.cpp  audiobackend.h  displaymanager.cpp  displaymanager.h  main.cpp  networkmanager.cpp  networkmanager.h  settingsbackend.cpp  settingsbackend.h  systeminfo.cpp  systeminfo.h  test_sysinfo.cpp  wallpapermanager.cpp  wallpapermanager.h
wiki/: Architecture.md  Audio-System.md  Backend-Modules.md  Build-and-Deployment.md  Developer-Guide.md  Home.md  Known-Issues.md  Power-Management.md  Roadmap.md  Technical-Report.md  UI-Design.md  _Footer.md
